<resources>
    <string name="app_name">ixmoviex</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="password">Password</string>
    <string name="repetir_password">Repetir password</string>
    <string name="e_mail">E-Mail</string>
    <string name="registrarse">Registrarse</string>
    <string name="nav_home">Home</string>
    <string name="nav_otif" />
    <string name="nav_notif" />
    <string name="nav_user">User</string>
    <string name="nav_notifications">Notifications</string>
    <string name="movimientos">Movimientos</string>
    <string name="cuenta">Cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
